--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-15 -->
+<!-- 2024-03-18 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -20,18 +20,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5f57eae">1. 笔记</a>
+<li><a href="#org14957c5">1. 笔记</a>
 <ul>
-<li><a href="#org9f58fa4">1.1. 2024-03-11 14:52:05</a></li>
-<li><a href="#orgd7f1112">1.2. 2024-03-11 08:30:00</a></li>
-<li><a href="#org9eeaedf">1.3. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org153be03">1.4. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#orgad9b886">1.5. 2023-12-28 (任务)</a></li>
-<li><a href="#org8790434">1.6. 2023-10-30 (任务)</a></li>
-<li><a href="#orgdfed230">1.7. 2023-09-07 (任务)</a></li>
+<li><a href="#orgb435766">1.1. 2024-03-13 11:01:46</a></li>
+<li><a href="#org8cbbc25">1.2. 2024-03-11 14:52:05</a></li>
+<li><a href="#org484b6e1">1.3. 2024-03-11 08:30:00</a></li>
+<li><a href="#org8452469">1.4. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org82189a0">1.5. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org9e9b6ae">1.6. 2023-12-28 (任务)</a></li>
+<li><a href="#org0a2cf87">1.7. 2023-10-30 (任务)</a></li>
+<li><a href="#orgf5f6210">1.8. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org2234c65">2. 任务结果</a></li>
+<li><a href="#orga1a6079">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -41,14 +42,59 @@
 </ul>
 
 
-
-<section id="outline-container-org5f57eae" class="outline-2">
-<h2 id="org5f57eae"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org14957c5" class="outline-2">
+<h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org9f58fa4" class="outline-3">
-<h3 id="org9f58fa4"><span class="section-number-3">1.1.</span> 2024-03-11 14:52:05</h3>
+<div id="outline-container-orgb435766" class="outline-3">
+<h3 id="orgb435766"><span class="section-number-3">1.1.</span> 2024-03-13 11:01:46</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+为 BMI 计算器增加身体状况的判断和显示。
+</p>
+
+<details><summary>参考代码</summary>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">jsbtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">sg</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>sgbox.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 4: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">tz</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>tzbox.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">bmi</span> = tz / <span style="color: #a8007f;">(</span>sg * sg<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 7: </span>
+<span class="linenr"> 8: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">stzk</span> = <span style="color: #0000c0;">null</span>;
+<span class="linenr"> 9: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 18.5<span style="color: #a8007f;">)</span>
+<span class="linenr">10: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">11: </span>        stzk = <span style="color: #2544bb;">"&#20559;&#30246;"</span>;
+<span class="linenr">12: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">13: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 24<span style="color: #a8007f;">)</span>
+<span class="linenr">14: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">15: </span>        stzk = <span style="color: #2544bb;">"&#27491;&#24120;"</span>;
+<span class="linenr">16: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">17: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 28<span style="color: #a8007f;">)</span>
+<span class="linenr">18: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">19: </span>        stzk = <span style="color: #2544bb;">"&#36807;&#37325;"</span>;
+<span class="linenr">20: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">21: </span>    <span style="color: #5317ac;">else</span>
+<span class="linenr">22: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">23: </span>        stzk = <span style="color: #2544bb;">"&#32933;&#32982;"</span>;
+<span class="linenr">24: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">25: </span>
+<span class="linenr">26: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">jieguo</span> = $<span style="color: #2544bb;">"&#24744;&#30340; BMI &#20026;: {bmi}\n&#24744;&#30340;&#36523;&#20307;&#29366;&#20917;&#20026;: {stzk}"</span>;
+<span class="linenr">27: </span>
+<span class="linenr">28: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">MessageBox.Show(jieguo);</span>
+<span class="linenr">29: </span>
+<span class="linenr">30: </span>    jglabel.Text = jieguo;
+<span class="linenr">31: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</details>
+</div>
+</div>
+
+<div id="outline-container-org8cbbc25" class="outline-3">
+<h3 id="org8cbbc25"><span class="section-number-3">1.2.</span> 2024-03-11 14:52:05</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 请大家保持安静，谢谢合作。
 </p>
@@ -90,7 +136,7 @@
 </p>
 
 
-<figure id="orge96620e">
+<figure id="orgf1b1072">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -98,12 +144,12 @@
 <details><summary>参考代码</summary>
 
 <div class="org-src-container">
-<pre class="src src-csharp"><span class="linenr">1: </span><span style="color: #d3869b;">double</span> <span style="color: #83a598;">sg</span> = <span style="color: #d3869b;">double</span>.<span style="color: #fabd2f;">Parse</span><span style="color: #458588;">(</span>sgbox.Text<span style="color: #458588;">)</span>;
-<span class="linenr">2: </span><span style="color: #d3869b;">double</span> <span style="color: #83a598;">tz</span> = <span style="color: #d3869b;">double</span>.<span style="color: #fabd2f;">Parse</span><span style="color: #458588;">(</span>tzbox.Text<span style="color: #458588;">)</span>;
-<span class="linenr">3: </span><span style="color: #d3869b;">double</span> <span style="color: #83a598;">bmi</span> = tz / <span style="color: #458588;">(</span>sg * sg<span style="color: #458588;">)</span>;
-<span class="linenr">4: </span><span style="color: #d3869b;">string</span> <span style="color: #83a598;">jieguo</span> = $<span style="color: #b8bb26;">"&#24744;&#30340; BMI &#20026;: {bmi}"</span>;
+<pre class="src src-csharp"><span class="linenr">1: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">sg</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #000000;">(</span>sgbox.Text<span style="color: #000000;">)</span>;
+<span class="linenr">2: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">tz</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #000000;">(</span>tzbox.Text<span style="color: #000000;">)</span>;
+<span class="linenr">3: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">bmi</span> = tz / <span style="color: #000000;">(</span>sg * sg<span style="color: #000000;">)</span>;
+<span class="linenr">4: </span><span style="color: #005a5f;">string</span> <span style="color: #00538b;">jieguo</span> = $<span style="color: #2544bb;">"&#24744;&#30340; BMI &#20026;: {bmi}"</span>;
 <span class="linenr">5: </span>
-<span class="linenr">6: </span>MessageBox.<span style="color: #fabd2f;">Show</span><span style="color: #458588;">(</span>jieguo<span style="color: #458588;">)</span>;
+<span class="linenr">6: </span>MessageBox.<span style="color: #721045;">Show</span><span style="color: #000000;">(</span>jieguo<span style="color: #000000;">)</span>;
 <span class="linenr">7: </span>
 <span class="linenr">8: </span>jglabel.Text = jieguo;
 </pre>
@@ -113,9 +159,9 @@
 </div>
 </div>
 
-<div id="outline-container-orgd7f1112" class="outline-3">
-<h3 id="orgd7f1112"><span class="section-number-3">1.2.</span> 2024-03-11 08:30:00</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-org484b6e1" class="outline-3">
+<h3 id="org484b6e1"><span class="section-number-3">1.3.</span> 2024-03-11 08:30:00</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 Winform 项目，VS 界面:
 </p>
@@ -172,9 +218,9 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org9eeaedf" class="outline-3">
-<h3 id="org9eeaedf"><span class="section-number-3">1.3.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-3">
+<div id="outline-container-org8452469" class="outline-3">
+<h3 id="org8452469"><span class="section-number-3">1.4.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 做一个求取 BMI 的控制台应用:
 </p>
@@ -200,9 +246,9 @@ Winform 项目，VS 界面:
 
 
 
-<div id="outline-container-org153be03" class="outline-3">
-<h3 id="org153be03"><span class="section-number-3">1.4.</span> 2024-01-15 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-org82189a0" class="outline-3">
+<h3 id="org82189a0"><span class="section-number-3">1.5.</span> 2024-01-15 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-5">
 <table>
 
 
@@ -675,9 +721,9 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-orgad9b886" class="outline-3">
-<h3 id="orgad9b886"><span class="section-number-3">1.5.</span> 2023-12-28 (任务)</h3>
-<div class="outline-text-3" id="text-1-5">
+<div id="outline-container-org9e9b6ae" class="outline-3">
+<h3 id="org9e9b6ae"><span class="section-number-3">1.6.</span> 2023-12-28 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 使用控制台实现点名的功能。
 </p>
@@ -688,18 +734,18 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org8790434" class="outline-3">
-<h3 id="org8790434"><span class="section-number-3">1.6.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-6">
+<div id="outline-container-org0a2cf87" class="outline-3">
+<h3 id="org0a2cf87"><span class="section-number-3">1.7.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgdfed230" class="outline-3">
-<h3 id="orgdfed230"><span class="section-number-3">1.7.</span> 2023-09-07 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<div id="outline-container-orgf5f6210" class="outline-3">
+<h3 id="orgf5f6210"><span class="section-number-3">1.8.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
@@ -707,10 +753,10 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-org2234c65" class="outline-2">
-<h2 id="org2234c65"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-orga1a6079" class="outline-2">
+<h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org678d184">
+<table id="org2a188e3">
 
 
 <colgroup>
@@ -728,9 +774,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#orgdfed230">2023-09-07</a></th>
-<th scope="col" class="org-right"><a href="#org8790434">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#orgad9b886">2023-12-28</a></th>
+<th scope="col" class="org-right"><a href="#orgf5f6210">2023-09-07</a></th>
+<th scope="col" class="org-right"><a href="#org0a2cf87">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org9e9b6ae">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1132,7 +1178,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-15</p>
+<p class="date">Created: 2024-03-18</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
