--- a/190/index.html
+++ b/190/index.html
@@ -53,7 +53,7 @@
 为 BMI 计算器增加身体状况的判断和显示。
 </p>
 
-<details><summary>参考代码</summary>
+<details><summary>修改按钮的事件逻辑，大致改为如下</summary>
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">jsbtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span class="linenr"> 2: </span><span style="color: #000000;">{</span>
@@ -136,7 +136,7 @@
 </p>
 
 
-<figure id="orgf1b1072">
+<figure id="org33aab8a">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
