--- a/190/index.html
+++ b/190/index.html
@@ -22,14 +22,15 @@
 <ul>
 <li><a href="#org14957c5">1. 笔记</a>
 <ul>
-<li><a href="#orgb435766">1.1. 2024-03-13 11:01:46</a></li>
-<li><a href="#org8cbbc25">1.2. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.3. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.4. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.5. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.6. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.7. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.8. 2023-09-07 (任务)</a></li>
+<li><a href="#orgf1ae66e">1.1. 2024-03-18 09:55:03</a></li>
+<li><a href="#orgb435766">1.2. 2024-03-13 11:01:46</a></li>
+<li><a href="#org8cbbc25">1.3. 2024-03-11 14:52:05</a></li>
+<li><a href="#org484b6e1">1.4. 2024-03-11 08:30:00</a></li>
+<li><a href="#org8452469">1.5. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org82189a0">1.6. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org9e9b6ae">1.7. 2023-12-28 (任务)</a></li>
+<li><a href="#org0a2cf87">1.8. 2023-10-30 (任务)</a></li>
+<li><a href="#orgf5f6210">1.9. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#orga1a6079">2. 任务结果</a></li>
@@ -46,9 +47,37 @@
 <h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgb435766" class="outline-3">
-<h3 id="orgb435766"><span class="section-number-3">1.1.</span> 2024-03-13 11:01:46</h3>
+<div id="outline-container-orgf1ae66e" class="outline-3">
+<h3 id="orgf1ae66e"><span class="section-number-3">1.1.</span> 2024-03-18 09:55:03</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+接下来进行练习:
+</p>
+<ul class="org-ul">
+<li>了解三个文件的关系: Form1.cs, Form1.Designer.cs, Form1.resx</li>
+<li>了解类创建中 partial 关键词的作用</li>
+<li>熟练配置 Form 的各种常用属性:
+<ul class="org-ul">
+<li>如何设定初始尺寸、位置</li>
+<li>如何固定窗口大小</li>
+<li>如何自定义窗口的颜色、背景</li>
+<li>如何设定边框的样式</li>
+<li>如何不使用窗口的本来样式，而是完全自定义</li>
+</ul></li>
+<li>熟悉打开多个 Form 窗口的操作
+<ul class="org-ul">
+<li>窗口操作的常用方法有哪些</li>
+<li>Show 跟 ShowDialog 有什么区别</li>
+<li>Hide, Close 跟 Dispose 有什么区别</li>
+<li>Activate 跟 Show 有什么区别</li>
+</ul></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-orgb435766" class="outline-3">
+<h3 id="orgb435766"><span class="section-number-3">1.2.</span> 2024-03-13 11:01:46</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
 </p>
@@ -93,8 +122,8 @@
 </div>
 
 <div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.2.</span> 2024-03-11 14:52:05</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org8cbbc25"><span class="section-number-3">1.3.</span> 2024-03-11 14:52:05</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 请大家保持安静，谢谢合作。
 </p>
@@ -136,7 +165,7 @@
 </p>
 
 
-<figure id="org33aab8a">
+<figure id="orgabcccae">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -160,8 +189,8 @@
 </div>
 
 <div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.3.</span> 2024-03-11 08:30:00</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org484b6e1"><span class="section-number-3">1.4.</span> 2024-03-11 08:30:00</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 Winform 项目，VS 界面:
 </p>
@@ -219,8 +248,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.4.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org8452469"><span class="section-number-3">1.5.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 做一个求取 BMI 的控制台应用:
 </p>
@@ -247,8 +276,8 @@ Winform 项目，VS 界面:
 
 
 <div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.5.</span> 2024-01-15 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org82189a0"><span class="section-number-3">1.6.</span> 2024-01-15 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-6">
 <table>
 
 
@@ -722,8 +751,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.6.</span> 2023-12-28 (任务)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org9e9b6ae"><span class="section-number-3">1.7.</span> 2023-12-28 (任务)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 使用控制台实现点名的功能。
 </p>
@@ -735,8 +764,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.7.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org0a2cf87"><span class="section-number-3">1.8.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -744,8 +773,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.8.</span> 2023-09-07 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="orgf5f6210"><span class="section-number-3">1.9.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
